Fixed parallax and sidemenu scrolling on mobile

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -17,6 +17,11 @@
   min-height: calc(100vh - 64px);
 }
 
+.site-no-scroll {
+  height: 100vh;
+  overflow: hidden;
+}
+
 md-sidenav {
   height: 100%;
   width: 200px;
